--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "mongoose": "^6.1.8",
-    "next": "12.0.8",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.1",
+    "react-icons": "^4.3.1",
     "sass": "^1.49.0"
   },
   "devDependencies": {
