--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.2.4",
     "mongoose": "^6.1.8",
     "next": "^12.0.10",
     "react": "17.0.2",
